--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: flex-end;
     gap: 10px;
+    width: 100%;
 }
 
 @mixin h-wrapper {
@@ -662,6 +663,9 @@ body {
             height: 200px;
             border: 2px dashed var(--border-color);
             border-radius: 3px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
             transition: all 0.2s ease;
 
             &:hover {
@@ -685,7 +689,7 @@ body {
                 align-items: center;
                 gap: 1em;
                 display: none;
-                
+
                 .fake-btn {
                     background-color: var(--panel-color);
                     border: 2px solid var(--border-color);
@@ -820,12 +824,31 @@ body {
             grid-template-columns: auto auto;
         }
     }
+
+    .card.settings {
+
+        .card.profile-pic {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
 }
 
 @media screen and (max-width: 768px) {
     .card.settings { 
         display: flex;
         flex-direction: column;
+
+        .card.profile-pic {
+
+            .file-drop-area {
+                
+                .has-file {
+                    flex-direction: column;
+                }
+            }
+        }
     }
 
     .on-phone {
