--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ body {
   display: flex;
   align-items: center;
   overflow: hidden;
+  background-color: var(--border-color);
   border-radius: 5px;
   width: 50px;
   height: 50px;
@@ -176,6 +177,7 @@ body {
   justify-content: flex-end;
   gap: 10px;
   width: 100%;
+  width: auto;
 }
 .content .btnSection form select {
   font-family: var(--primary-font);
@@ -203,6 +205,7 @@ body {
 }
 .content .btnSection form button i {
   color: var(--accent-color);
+  font-size: 16px;
 }
 .content .card.with-table {
   display: grid;
@@ -245,6 +248,7 @@ body {
   display: flex;
   align-items: center;
   overflow: hidden;
+  background-color: var(--border-color);
   border-radius: 100%;
   width: 100px;
   height: 100px;
@@ -328,13 +332,20 @@ body {
   align-items: center;
   gap: 0.5rem;
 }
-.content .table-container table tbody tr td .profile-name img {
-  aspect-ratio: 3/2;
-  -o-object-fit: cover;
-  object-fit: cover;
+.content .table-container table tbody tr td .profile-name .img-container {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  background-color: var(--border-color);
   border-radius: 100%;
   width: 30px;
   height: 30px;
+}
+.content .table-container table tbody tr td .profile-name .img-container img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .content .table-container table tbody tr td .temp-pass {
   background-color: #eeeeee;
@@ -400,13 +411,20 @@ body {
   right: 10%;
   transition: all 0.2s ease;
 }
-.content .table-container table tbody tr img {
-  aspect-ratio: 3/2;
-  -o-object-fit: cover;
-  object-fit: cover;
+.content .table-container table tbody tr .img-container {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  background-color: var(--border-color);
   border-radius: 100%;
   width: 30px;
   height: 30px;
+}
+.content .table-container table tbody tr .img-container img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .on-phone {
@@ -591,6 +609,7 @@ body {
   display: flex;
   align-items: center;
   overflow: hidden;
+  background-color: var(--border-color);
   border-radius: 100%;
   width: 110px;
   height: 110px;
