--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,23 @@ body {
   border: 2px solid var(--border-color);
   background-color: var(--panel-color);
   border-radius: 10px;
-  padding: 0.5em 1em;
+  gap: 0;
+  padding: 1em;
+}
+.content .card.with-table a {
+  font-family: var(--primary-font);
+  padding: 0.75em 1em;
+  border: none;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: rgba(79, 152, 255, 0.1490196078);
+  color: #5b7dac;
+  border-radius: 6px;
+  padding: 5px 7px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .content .card.welcome {
   display: grid;
