--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+@import url("fonts.css");
 :root {
   --main-bg-color: #F9F8FF;
   --panel-color: #FFFFFF;
@@ -7,7 +8,7 @@
   --text-color: #56555c;
   --lighter-text-color: #82808F;
   --accent-color: #ffd600;
-  --primary-font: Plus Jakarta Sans;
+  --primary-font: Mi Sans;
   --vibrant-color: linear-gradient(135deg, #FFDF2B, #FF7A00);
   --even-table-color: 0, 0, 0;
   --sidebar-width: 275px;
@@ -155,6 +156,11 @@ body {
 .content-title p {
   font-weight: 500;
 }
+.content-title span {
+  color: var(--lighter-text-color);
+  font-size: small;
+  font-weight: 500;
+}
 
 .content {
   padding: 1em;
@@ -162,9 +168,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1em;
-}
-.content span {
-  color: var(--lighter-text-color);
 }
 .content .btnSection {
   display: flex;
@@ -181,6 +184,7 @@ body {
 }
 .content .btnSection form select {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -192,6 +196,7 @@ body {
 }
 .content .btnSection form button {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -215,10 +220,11 @@ body {
   background-color: var(--panel-color);
   border-radius: 10px;
   gap: 0;
-  padding: 1em;
+  padding: 0.5em 1em;
 }
 .content .card.with-table a {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -298,6 +304,7 @@ body {
 }
 .content .table-container table thead tr th {
   text-transform: uppercase;
+  white-space: nowrap;
   letter-spacing: 1px;
   font-size: 14px;
   padding: 0.5rem 0.85rem;
@@ -328,6 +335,7 @@ body {
   background-color: rgba(var(--even-table-color), 0.025);
 }
 .content .table-container table tbody tr td {
+  white-space: nowrap;
   border-width: 2px 0px;
   border-style: solid;
   border-color: var(--border-color);
@@ -387,9 +395,20 @@ body {
   align-items: center;
   gap: 0.5rem;
 }
-.content .table-container table tbody tr td .attachment a img {
+.content .table-container table tbody tr td .attachment a .img-container {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  background-color: var(--border-color);
+  border-radius: 100%;
   width: 20px;
   height: 20px;
+}
+.content .table-container table tbody tr td .attachment a .img-container img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .content .table-container table tbody tr td .attachment .no-proof {
   background-color: #e9e9e9;
@@ -443,8 +462,11 @@ body {
   height: 100%;
 }
 
-.on-phone {
+span.on-phone {
   display: none;
+  color: var(--lighter-text-color);
+  font-size: small;
+  font-weight: 500;
 }
 
 .data-not-found {
@@ -467,6 +489,7 @@ body {
 
 .status-indicator {
   font-weight: 500;
+  white-space: nowrap;
   text-align: center;
   padding: 5px 7px;
   font-size: 14px;
@@ -493,6 +516,7 @@ body {
 
 #openModal {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -560,6 +584,7 @@ body {
 }
 .modal .btnSection button {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -612,6 +637,7 @@ body {
 }
 .card.settings .card.profile-pic .btnSection button {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -714,6 +740,7 @@ body {
 }
 .card.settings .card.personal-info .btnSection button {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -750,6 +777,9 @@ body {
   grid-auto-rows: minmax(auto, auto);
   gap: 1em;
 }
+.dash-cards a {
+  color: unset;
+}
 .dash-cards .card {
   display: grid;
   gap: 1em;
@@ -759,6 +789,10 @@ body {
   border-radius: 10px;
   gap: 0;
   overflow: hidden;
+  transition: all 0.4s ease;
+}
+.dash-cards .card:hover {
+  transform: scale(1.05);
 }
 .dash-cards .card :nth-child(1) {
   font-size: 18px;
@@ -775,6 +809,7 @@ body {
 }
 .dash-cards .card span.how-many button {
   font-family: var(--primary-font);
+  white-space: nowrap;
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
