--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -533,16 +533,27 @@ span.on-phone {
 }
 
 #modalBG {
-    display: none;
     position: fixed;
     z-index: 9999;
-    // display: flex;
     width: 100%;
     height: 100%;
+    display: flex;
     justify-content: center;
+    padding: 10px 0;
     overflow-y: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease; /* Delay visibility change after opacity transition */
+    
+    &.show {
+        opacity: 1;
+        visibility: visible;
+        transform: scale(1); /* Zoom in to full scale (1) */
+    }
 }
+
+
 
 .modal {
     background-color: var(--panel-color);
@@ -558,6 +569,17 @@ span.on-phone {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.9); /* Initial scale set to 0.8 */
+    transition: all 0.3s ease-in-out; /* Add transform transition for zoom effect */
+
+    &.show {
+        opacity: 1;
+        visibility: visible;
+        transform: scale(1);
+        transition-delay: 0s;
+    }
 
     .modalTitle {
         @include v-wrapper;
@@ -612,6 +634,79 @@ span.on-phone {
     .v-wrapper {
         @include v-wrapper;
     }
+
+    @include img-container(150px, 5px)
+}
+
+input[type=file] {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+}
+
+.file-drop-area {
+    position: relative;
+    padding: 1em;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+
+    height: 200px;
+    border: 2px dashed var(--border-color);
+    border-radius: 3px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: all 0.2s ease;
+
+    &:hover {
+        background-color: var(--panel-color);
+    }
+
+    .no-file-yet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5em;
+        text-align: center;
+
+        span {
+            font-size: .8em;
+        }
+    }
+
+    .has-file {
+        display: flex;
+        align-items: center;
+        gap: 1em;
+        display: none;
+
+        .fake-btn {
+            background-color: var(--panel-color);
+            border: 2px solid var(--border-color);
+            border-radius: 3px;
+            padding: 8px 15px;
+            margin-right: 10px;
+            font-size: 12px;
+            font-weight: bold;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
+        .file-msg {
+            font-size: smaller;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
 }
 
 //USER PROFILE (INTERN)
@@ -648,77 +743,6 @@ span.on-phone {
         }
 
         @include img-container(110px, 100%);
-        
-        input[type=file] {
-            opacity: 0;
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 100%;
-            cursor: pointer;
-        }
-
-        .file-drop-area {
-            position: relative;
-            padding: 1em;
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 1em;
-
-            height: 200px;
-            border: 2px dashed var(--border-color);
-            border-radius: 3px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            transition: all 0.2s ease;
-
-            &:hover {
-                background-color: var(--panel-color);
-            }
-
-            .no-file-yet {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 0.5em;
-                text-align: center;
-
-                span {
-                    font-size: .8em;
-                }
-            }
-
-            .has-file {
-                display: flex;
-                align-items: center;
-                gap: 1em;
-                display: none;
-
-                .fake-btn {
-                    background-color: var(--panel-color);
-                    border: 2px solid var(--border-color);
-                    border-radius: 3px;
-                    padding: 8px 15px;
-                    margin-right: 10px;
-                    font-size: 12px;
-                    font-weight: bold;
-                    text-align: center;
-                    text-transform: uppercase;
-                }
-
-                .file-msg {
-                    font-size: smaller;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
-            }
-        }
     }
 
     .card.personal-info {
@@ -765,10 +789,17 @@ span.on-phone {
     }
 }
 
+.dash-cards.home {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, auto));
+    grid-auto-rows: minmax(auto, auto);
+    gap: 1em;
+}
+
 //DASHBOARD FOR INTERN AND ADMIN
 .dash-cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     grid-auto-rows: minmax(auto, auto);
     gap: 1em;
 
@@ -781,9 +812,10 @@ span.on-phone {
         gap: 0;
         overflow: hidden;
         transition: all 0.4s ease;
+        height: 100%;
         
         &:hover {
-            transform: scale(1.05);
+            transform: scale(1.025);
         }
         
         :nth-child(1) {
@@ -837,6 +869,22 @@ span.on-phone {
 */
 
 @media screen and (max-width: 448px) {
+    #modalBG {
+        padding: 0;
+    }
+
+    .modal {
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 0px;
+        overflow-y: auto;
+
+        .h-wrapper {
+            display: grid;
+        }
+    }
+
     .content {
         .dash-cards {
             grid-template-columns: auto auto;
@@ -854,18 +902,19 @@ span.on-phone {
 }
 
 @media screen and (max-width: 768px) {
+    .file-drop-area {
+        
+        .has-file {
+            flex-direction: column;
+        }
+    }
+
     .card.settings { 
         display: flex;
         flex-direction: column;
 
         .card.profile-pic {
 
-            .file-drop-area {
-                
-                .has-file {
-                    flex-direction: column;
-                }
-            }
         }
     }
 
