--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 @import url("fonts.css");
+.h-wrapper {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.v-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 :root {
   --main-bg-color: #F9F8FF;
   --panel-color: #FFFFFF;
@@ -28,7 +39,6 @@ body {
   color: var(--text-color);
   font-family: var(--primary-font);
 }
-
 
 #hamburger {
   display: none;
@@ -176,12 +186,49 @@ body {
   gap: 10px;
   width: 100%;
 }
+.content .btnSection .search-bar {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding-left: 0.75em;
+  border-radius: 10px;
+  font-family: var(--primary-font);
+  background-color: #FAFAFA;
+  border: 2px solid var(--border-color);
+}
+.content .btnSection .search-bar i {
+  color: var(--accent-color);
+}
+.content .btnSection .search-bar input {
+  font-family: var(--primary-font);
+  white-space: nowrap;
+  padding: 0.75em 1em;
+  border: none;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  cursor: text;
+  background: none;
+  border: none;
+}
+.content .btnSection select {
+  font-family: var(--primary-font);
+  white-space: nowrap;
+  padding: 0.75em 1em;
+  border: none;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: var(--primary-font);
+  border: 2px solid var(--border-color);
+  background-color: #FAFAFA;
+}
 .content .btnSection form {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
   width: 100%;
-  width: auto;
+  width: 100%;
 }
 .content .btnSection form select {
   font-family: var(--primary-font);
@@ -585,6 +632,7 @@ span.on-phone {
 }
 .modal input, .modal textarea, .modal select {
   font-family: var(--primary-font);
+  width: 100%;
   padding: 10px;
   border-radius: 3px;
   color: var(--text-color);
@@ -891,6 +939,9 @@ input[type=file] {
 @media screen and (max-width: 448px) {
   #modalBG {
     padding: 0;
+    flex-direction: column;
+    justify-content: unset;
+    gap: 0 !important;
   }
   .modal {
     width: 100%;
@@ -971,6 +1022,14 @@ input[type=file] {
   }
   .content .dash-cards.home {
     grid-template-columns: unset;
+  }
+  .content .btnSection {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .content .btnSection select {
+    width: 100%;
   }
   .card.welcome {
     flex-direction: column-reverse;
