--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -917,7 +917,7 @@ input[type=file] {
     }
 
     .modal {
-        width: 100%;
+        width: 100% !important;
         height: 100%;
         border: none;
         border-radius: 0px;
