--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,6 +111,140 @@ body {
     font-family: var(--primary-font);
 }
 
+// login
+
+.invert-logo {
+    transition: all 0.4s ease;
+}
+
+.header-logo {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .img-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        width: 60px;
+        height: 60px;
+
+        img {
+            -o-object-fit: contain;
+               object-fit: contain;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.loginModalBG {
+    background: url(../login-bg.png);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    place-items: center;
+
+    .loginModal {
+        transition: all 0.4s ease;
+        @include v-wrapper;
+        @include card;
+        padding: 2em;
+        gap: 2em;
+        overflow: hidden;
+
+        height: 60vh;
+        width: 50vh;
+
+        .v-wrapper {
+            @include v-wrapper;
+            justify-content: center;
+            gap: 2em;
+
+            .login-text {
+                text-align: center;
+            }
+
+            .login-form {
+                @include v-wrapper;
+                gap: 1em;
+
+                .loginBtn {
+                    @include button;
+                    background-color: var(--accent-color);
+                    border-radius: 999px;
+                    font-size: 1em;
+                    text-transform: uppercase;
+                    padding: 1em;
+                    font-weight: bold;
+                }
+                
+                .input-group {
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+
+                    .toggle-password {
+                        position: absolute;
+                        right: 16px;
+                        font-size: 1em !important;
+                    }
+    
+                    label {
+                        position: absolute;
+                        left: 16px;
+                        top: 50%;
+    
+                        pointer-events: none;
+                        font-weight: 500;
+                        transform: translateY(-50%);
+                        transition: all 0.2s ease;
+                    }
+    
+                    input {
+                        @include button;
+                        cursor: text;
+                        height: 4em;
+                        width: 100%;
+                        padding: 1em;
+                        font-weight: 500;
+                        border: 2px solid var(--border-color);
+                    }
+    
+                    input:is(:focus, :valid)~label {
+                        font-size: 0.75rem;
+                        transform: translateY(-120%);
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+@media screen and (max-width: 448px) {
+    .invert-logo {
+        -webkit-filter: brightness(-100%);
+                filter: brightness(-100%);
+    }
+
+    .loginModalBG {
+        .loginModal {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 0;
+        }
+    }
+}
+
 #hamburger {
     display: none;
 }
@@ -121,7 +255,7 @@ body {
 
 #sidebarBtn {
     z-index: 11;
-    transform: translateX(-10px) translateY(-50%);
+    transform: translateY(-50%);
     @include button;
     @include card;
     padding: 0px;
@@ -288,7 +422,7 @@ body {
 }
 
 .content {
-    padding: 1em;
+    padding: 1em 2em;
     margin-left: var(--sidebar-width);
 
     transition: all 0.4s ease;
@@ -644,8 +778,6 @@ span.on-phone {
     }
 }
 
-
-
 .modal {
     background-color: var(--panel-color);
     border: 2px solid var(--border-color);
@@ -745,7 +877,7 @@ input[type=file] {
 }
 
 .file-container {
-     
+
     a {
         @include h-wrapper;
         @include text-wrapper;
@@ -879,11 +1011,20 @@ input[type=file] {
 
         .h-wrapper {
             @include h-wrapper;
+            align-items: center;
+
+            .toggle-password {
+                position: absolute;
+                right: 90px;
+                font-size: 1em !important;
+                z-index: 2;
+            }
         }
 
         input,
         select {
             border-radius: 12px;
+            width: 100%;
             padding: 1em;
             font-family: var(--primary-font);
             font-weight: 500;
