--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -594,7 +594,7 @@ body {
                         border-width: 2px 0px;
                         border-style: solid;
                         border-color: var(--border-color);
-                        padding: 0.5rem 0.85rem;
+                        padding: 0.5rem 0.5rem;
                     }
 
                     td .actions {
@@ -629,15 +629,18 @@ body {
                     }
 
                     td .attachment {
+                        display: flex;
                         font-size: 14px;
+                        overflow-x: hidden;
+                        overflow-y: auto;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 0.5em;
 
                         a {
                             background-color: #4f98ff26;
                             padding: 5px 7px;
                             border-radius: 6px;
-                            width: -webkit-fit-content;
-                            width: -moz-fit-content;
-                            width: fit-content;
                             color: #5b7dac;
                             display: flex;
                             align-items: center;
@@ -657,29 +660,6 @@ body {
                             display: flex;
                             align-items: center;
                             gap: 0.5rem;
-                        }
-
-                        a:hover~.tooltiptext {
-                            opacity: 1;
-                            visibility: visible;
-                            display: block;
-                        }
-
-                        span.tooltiptext {
-                            @include card;
-                            opacity: 0;
-                            visibility: hidden;
-                            display: none;
-                            text-align: center;
-                            border-radius: 6px;
-                            padding: 5px;
-                            box-shadow: 1px 1px 1px #00000025;
-
-                            /* Position the tooltip */
-                            position: absolute;
-                            z-index: 1;
-
-                            transition: all 0.2s ease;
                         }
                     }
 
@@ -744,6 +724,82 @@ span.on-phone {
 .status-indicator.incomplete {
     color: #b10000;
     background-color: #b1000026;
+}
+
+.open-attach-modal {
+    background-color: rgba(79, 152, 255, 0.1490196078);
+    padding: 5px 7px;
+    border-radius: 6px;
+    color: #5b7dac;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-weight: 600;
+    border: none;
+    font-family: var(--primary-font);
+    cursor: pointer;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+}
+
+
+#attachment-modalBG {
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+    overflow-y: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0;
+    left: 0;
+
+    &.show {
+        display: grid;
+    }
+}
+
+.attachment-modal {
+    background-color: var(--panel-color);
+    border: 2px solid var(--border-color);
+    border-radius: 10px;
+    padding: 1.5em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    max-width: 500px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+
+    .list-file {
+        @include h-wrapper;
+        flex-wrap: wrap;
+        gap: 0.5em;
+    }
+
+    .btnSection {
+        @include btnSection;
+
+        button {
+            @include button;
+        }
+    }
+
+    .modalTitle {
+        @include h-wrapper;
+        justify-content: space-between;
+        align-items: center;
+
+        span {
+            cursor: default;
+            font-size: 1.5em;
+        }
+    }
 }
 
 
@@ -1237,6 +1293,8 @@ input[type=file] {
 
     .content {
         margin-left: 0;
+        padding-left: 1em;
+        padding-right: 1em;
         padding-top: 6em;
 
         .dash-cards.home {
